0.1.19  Patch:(Set overflow hidden on categoriesBar. Fixes the Todo but I feel like this WILL break)
 TODO : Make categories disappear after closeNav. How? -> Probably in closeNav, access children of divs and set display to none. This lets me keep a decent animation

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ main {
     background-color: #181202;
     height: 100vh;
     width: 5px;
+    overflow: hidden;
 }
 
 .AllDrinkCategories {
